<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:alpha="1"
    android:background="#7c1bb7"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/imageViewprofile"
        android:layout_width="86dp"
        android:layout_height="83dp"
        android:alpha="1"
        android:background="@color/md_white_1000"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing" />
    <ImageView
        android:layout_marginLeft="98dp"
        android:layout_width="86dp"
        android:layout_height="83dp"
        android:alpha="0.7"

        android:background="@drawable/logo"

        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing" />
</LinearLayout>


    <TextView
        android:id="@+id/usernamedrawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#fff" />


    <TextView
        android:id="@+id/emaildrawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/nav_header_subtitle"
        android:textColor="#fff"  />





</LinearLayout>
